--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
+    "use-force-update": "^1.0.7",
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
@@ -121,5 +122,8 @@
       "jsx",
       "node"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-json-strings": "^7.8.3"
   }
 }
