--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.8.6",
+    "react-highlight-words": "^0.17.0",
     "react-hot-loader": "^4.12.12",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
