--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
+    "redux-log-slow-reducers": "0.0.2",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
